[gd_scene format=3 uid="uid://rtk527cyr7kb"]

[ext_resource type="Script" uid="uid://dwdvmjrqgrbdf" path="res://scenes/reusables/combat_currency.gd" id="1_44acn"]
[ext_resource type="Texture2D" uid="uid://ega8yf10nrw" path="res://assets/Fire_symbol.png" id="2_i01wt"]
[ext_resource type="Texture2D" uid="uid://b7ctbguy8vt4q" path="res://assets/Water_symbol.png" id="3_pcwuj"]
[ext_resource type="Texture2D" uid="uid://c2a810t6sstxx" path="res://assets/Lightning_Symbol.png" id="4_c8hl3"]
[ext_resource type="Texture2D" uid="uid://6wem028prmhu" path="res://assets/Grass_symbol.png" id="5_ghax0"]
[ext_resource type="Texture2D" uid="uid://dgkpabaj1kl5r" path="res://assets/Earth_symbol.png" id="6_1f4h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evy26"]
bg_color = Color(0.19607843, 0.2, 0.23137255, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.6901961, 0.80784315, 0.85882354, 1)
shadow_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_a672k"]
font_size = 30
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejoqx"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 11
border_color = Color(0.6901961, 0.80784315, 0.85882354, 1)
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_pyo7b"]
font_size = 48
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="CombatCurrency" type="Control" unique_id=776160579]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1628.0
offset_bottom = -719.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("1_44acn")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=99256548]
layout_mode = 0
offset_right = 951.0
offset_bottom = 84.99999
theme_override_styles/panel = SubResource("StyleBoxFlat_evy26")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=2104518153]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1430491860]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/HBox" unique_id=731983816]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Tokens:"
label_settings = SubResource("LabelSettings_a672k")
horizontal_alignment = 1

[node name="VSeparator5" type="VSeparator" parent="PanelContainer/MarginContainer/HBox" unique_id=1279437026]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxFlat_ejoqx")

[node name="Control" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox" unique_id=652374277]
layout_mode = 2
size_flags_vertical = 0

[node name="FireSymbol" type="TextureRect" parent="PanelContainer/MarginContainer/HBox/Control" unique_id=1609316016]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("2_i01wt")
expand_mode = 2

[node name="FireCount" type="Label" parent="PanelContainer/MarginContainer/HBox/Control" unique_id=444090520]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pyo7b")

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBox" unique_id=4336436]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxFlat_ejoqx")

[node name="Control2" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox" unique_id=1693949645]
layout_mode = 2
size_flags_vertical = 0

[node name="WaterSymbol" type="TextureRect" parent="PanelContainer/MarginContainer/HBox/Control2" unique_id=2087910941]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("3_pcwuj")
expand_mode = 2

[node name="WaterCount" type="Label" parent="PanelContainer/MarginContainer/HBox/Control2" unique_id=634822718]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pyo7b")

[node name="VSeparator4" type="VSeparator" parent="PanelContainer/MarginContainer/HBox" unique_id=2018812517]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxFlat_ejoqx")

[node name="Control3" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox" unique_id=80546567]
layout_mode = 2
size_flags_vertical = 0

[node name="LightningSymbol" type="TextureRect" parent="PanelContainer/MarginContainer/HBox/Control3" unique_id=1718363185]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("4_c8hl3")
expand_mode = 2

[node name="LightningCount" type="Label" parent="PanelContainer/MarginContainer/HBox/Control3" unique_id=1090015907]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pyo7b")

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/HBox" unique_id=25705227]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxFlat_ejoqx")

[node name="Control5" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox" unique_id=1698197726]
layout_mode = 2
size_flags_vertical = 0

[node name="GrassSymbol" type="TextureRect" parent="PanelContainer/MarginContainer/HBox/Control5" unique_id=972128126]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("5_ghax0")
expand_mode = 2

[node name="GrassCount" type="Label" parent="PanelContainer/MarginContainer/HBox/Control5" unique_id=2109137431]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pyo7b")

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/HBox" unique_id=1885052857]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxFlat_ejoqx")

[node name="Control4" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox" unique_id=240102856]
layout_mode = 2
size_flags_vertical = 0

[node name="EarthSymbol" type="TextureRect" parent="PanelContainer/MarginContainer/HBox/Control4" unique_id=1421869813]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("6_1f4h4")
expand_mode = 2

[node name="EarthCount" type="Label" parent="PanelContainer/MarginContainer/HBox/Control4" unique_id=1278947627]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pyo7b")
